--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 ZynAddSubFX
 -----------
 
-image::https://travis-ci.org/zynaddsubfx/zynaddsubfx.svg?branch=master[title="Build status", alt="Build status", link="https://travis-ci.org/zynaddsubfx/zynaddsubfx"]
+image::https://travis-ci.org/zynaddsubfx/zynaddsubfx.svg?branch=master[alt="Build status", link="https://travis-ci.org/zynaddsubfx/zynaddsubfx"]
 
 It is a feature heavy realtime software synthesizer for Linux, OSX,
 and Windows. 
